<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".screens.startScreen.LoginFragment">

    <ProgressBar
        android:id="@+id/login_PGB_progressbar"
        style="@style/Widget.MaterialComponents.CircularProgressIndicator"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="#603a91"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:background="#00000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_TXT_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="#603a91"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_TXT_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/email"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxWidth="488dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="#603a91"
            android:textColorHint="#603a91" />

        <EditText
            android:id="@+id/login_TXT_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/password"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxWidth="488dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="#603a91"
            android:textColorHint="#603a91"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/login_TXT_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:maxWidth="488dp"
            android:minHeight="48dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#603a91"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/login_BTN_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/image_login"
            android:src="@drawable/btn_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_BTN_login_google"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_btn_2"
            android:drawableStart="@drawable/google"
            android:drawablePadding="20dp"
            android:padding="15dp"
            android:text="@string/login_with_google"
            android:textColor="#603a91"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_TXT_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/are_you_a_new_user_register"
            android:textAlignment="center"
            android:textColor="#603a91"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>